@@ -1,6 +1,7 @@
 VDR Plugin 'streamdev' Revision History
 ---------------------------------------
  
+- added support for VDR 1.7.19 SignalStrength/SignalQuality
 - analog video channels use the same transponder and pid for different
   channels, so streamdev-client must always issue TUNE command
 - server must close the VTP connection also if filter stream is broken
